--- a/examples/train_lora/qwen2_lora_7b.yaml
+++ b/examples/train_lora/qwen2_lora_7b.yaml
@@ -25,11 +25,12 @@ plot_loss: true
 overwrite_output_dir: true
 
 ##train
+#per_device_train_batch_size: 2
 per_device_train_batch_size: 4
 gradient_accumulation_steps: 8
 learning_rate: 1.0e-4
 #learning_rate: 1.0e-5
-num_train_epochs: 20
+num_train_epochs: 5
 lr_scheduler_type: cosine
 #lr_scheduler_type: constant
 warmup_ratio: 0.1
@@ -38,6 +39,7 @@ ddp_timeout: 180000000
 
 ##eval
 val_size: 0.3
+#per_device_eval_batch_size: 2
 per_device_eval_batch_size: 4
 eval_strategy: steps
 eval_steps: 100
